# cnn_gate_detection

./: .gitignore  .gitmodules
doc/: notes.txt
doc/poster/: LLTposter-sample.snm
doc/poster/cvlab_1/: LLTposter-sample.tex  LLTposter-sample.vrb  poster.py  sample.bib
doc/poster/prlab_1/: LLTposter-sample.snm  LLTposter-sample.tex  LLTposter-sample.vrb  sample.bib
doc/presentation/mid-term/: fi-pdflatex.nav  fi-pdflatex.tex  fi-pdflatex.toc
doc/presentation/mid-term0/: beamerthemefibeamer.sty  fi-pdflatex.nav  fi-pdflatex.tex
doc/report/0901/: bib.bib
doc/report/2017-11-17/: thesis-meeting-07-11-17  thesis-meeting-07-11-17.odp
doc/report/2018-02-16/: report_0202.tex
doc/report/2018-03-28/: report_2803.tex
doc/report/2018-04-11/: report_1104.tex
doc/report/2018-04-22/: report_2204.tex
doc/report/2018-05-11/: report_1405.tex
doc/report/2018-05-22/: literature.bib  report_2205.tex
doc/report/2018-06-06/: report_0606.tex
doc/report/2018-06-27/: report_2706.tex
doc/report/2018-07-03/: report_0703.tex
doc/report/2018-07-18/: report_1807.tex
doc/report/2018-07-25/: report_1807.tex
doc/report/2018-08-15/: report_2508.tex
doc/report/2018-09-01/: lab_report_1.tex
doc/report/2018-16-02/: literature.bib
doc/report/2018-28-03/: report_2803.tex
doc/research/: literature.bib  literature_review.tex  objectdetect_comparison.tex  single_shot_detectors.tex
doc/results/: .~lock.performance_jevois.ods#  .~lock.speed.ods#  .~lock.speed_jevois.ods#  performance_jevois.ods  speed.ods  speed_jevois.ods
doc/thesis/: dissertation.tex  thesis.bib  thesis.tex  thesis.toc  thesis.toc.orig
doc/thesis/chapters/: Conclusion.tex  Discussion.tex  acknowledgement.tex  appendix-datagen.tex  background.tex  deployment.tex  discussion.tex  evaluation.tex  experiments.tex  glossary.tex  intro.tex  method.tex  methodology.tex  object_detection.tex  object_detection.tex.orig  optimization.tex  preface.tex  summary.tex  title.tex  training.tex  training.tex.orig
doc/thesis/table/: shallow_basement.txt
doc/thesis/tables/: .~lock.feature_extractors.ods#  .~lock.gen_vs_spec.ods#  all_basement.txt  all_iros.txt  augmentation.txt  deep_basement.txt  deep_iros.txt  depth.txt  diff_iros.txt  feature_extractors.ods  gen_vs_spec.ods  scenegen_results.ods  shallow_basement.txt  shallow_iros.txt  sim_vs_voc.txt  width.txt
experiments/: demo.py  evalset.py  evalstream.py  evaluation.py  evaluation_stream.py  plots.py  plotset.py  plotstream.py  setanalysis.py  training.py
experiments/classification/: demo.py  evaluation.py  training.py
resource/gates/: gate2016.fbx  gate2016.mtl  gate2016_bigpole.mtl  gate2016_large.mtl  gate250.mtl  half_gate.mtl  open_gate.mtl  simple_square.mtl
resource/gates/materials/: 15-steampunk-copper.blend  22-brushed-aluminium.blend  25-copper.blend  78-gold.blend  gold.blend
resource/gates/wHoop_race_gate/: LICENSE.txt  README.txt  attribution_card.html
scripts/: evalstream.py  genimg.py  genshots.py  showimg.py  training-long.sbatch  training.py
scripts/datagen/: genstreamshots.py
scripts/python/: demo.py  label.py  mkvideo.py  plothistory.py  showimg.py  training.py  training_gate.py
scripts/python/datagen/: convert_label.py  convert_mat.py  explore.py  genaug.py  genimg.py  genshots.py  genstreamimg.py  genstreamshots.py  setanalysis.py
scripts/python/evaluation/: evalap.py  evalset.py  evalspeed.py  evalstream.py  plotset.py  plotstream.py  showspeed.py
scripts/sh/: training-short.sbatch
src/cmake/: CMakeLists.txt
src/cpp/: exp.cpp  inference_test.cpp  main.cpp
src/cpp/run_darknet/: main.cpp
src/cpp/run_tflite/: exp.h  max.cpp  max.h
src/python/: build_model.py  test.ipynb  train.py
src/python/etc/: arch2darknet.py  boxsizes.py  camcalib.py  darknetprep.py  demo.py  gendistmodel.py  kmeansboxplot.py  label.py  mkvideo.py  mulitply_adds.py  pb2tensorboard.py  plot_operations.py  receptive_field.py  setanalysis.py  showanchors.py  simple_tf.py
src/python/evaluation/: DetectionEvaluator.py  SpeedEvaluator.py  evalcluster.py  evalmetric.py  evalset.py  evaluation.py
src/python/experiments/: mavnet.py  mavnet_lowres.py  mavnet_strides.py
src/python/main/: demo.py  label.py  mkvideo.py  plothistory.py  showimg.py  training.py  training_gate.py  training_ssd_voc.py
src/python/modelzoo/: Decoder.py  Detector.py  Encoder.py  ModelConverter.py  Postprocessor.py  Preprocessor.py  Training.py  build_model.py  graphconv.py  iou.py  train.py
src/python/report/: demo_anchors.py  demo_focusblur.py  plot_ap_speed_tradeoff.py  plot_background.py  plot_background_size.py  plot_bottleneck.py  plot_camplace.py  plot_cats.py  plot_empty_vs_sign.py  plot_ewfo_vs_other_size.py  plot_resolution.py  plot_resolution_size.py  plot_transfer.py  plot_transfer_deep.py  plot_view_size.py  plot_width.py  table_background.py  table_ewfo_vs_other.py
src/python/samplegen/: SetAnalyzer.py
src/python/test/: LossDebug.py  MetricsTest.py  YoloLossTest.py  augmenter.py  boxsizetest.py  demo_distortion.py  eval.py  fisheye.py  inference_model.py  mAP.py  mAP_yolo.py  mAP_yolo_batch.py  map.py  metric.py  non_max_suppr.py  yoloparser.py  yolov3debug.py  yolov3debugloss.py
src/python/tests/: eval_arch.py  eval_arch_pr.py  eval_arch_size.py  eval_augmentation.py  (+36 more)
src/sh/: 160.sh  20hz.sbatch  320.sh  320_strides1.sh  320_strides2.sh  all.sh  background.sh  baseline.sbatch  blur.sh  blur_distortion.sh  cats.sh  cats_deep.sh  chromatic.sh  combinedviews.sh  crop-52x52.sbatch  depth1.sh  depth2.sh  depth3.sh  distortion.sh  eval_comparsion.sh  evalset.sbatch  evalspeed.sbatch  evalspeed_all.sbatch  evalspeedy.sbatch  evalstream.batch  ewfo.sh  ewfo_deep.sh  ewfo_sim.sh  ewfo_voc.sh  ewfv_vs_obj.sh  exp_cropnet_anchor.sbatch  exp_cropnet_layers.sbatch  exp_cropnet_layers_104.sbatch  exp_cropnet_layers_large.sbatch  exp_cropnet_layers_width.sbatch  exp_gatenet_layers_width_res.sbatch  exp_refnet_3by3.sbatch  exp_refnet_layers.sbatch  exp_refnet_layers_width.sbatch  exposure.sh  (+114 more)
temp/: label_map.pbtxt  ssd_inception_v2.config
tools/: ToDos.txt
(+1213 files in other folders)
